--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     The RANDOM NUMBER is... #
 </h2>
 
-<button class="btn" type="button">
+<button onclick = "randomNumber()" class="btn" type="button">
     <strong>C L I C K</strong>
     <div id="container-stars">
       <div id="stars"></div>
@@ -26,5 +26,6 @@
       <div class="circle"></div>
     </div>
   </button>
+  <script src="script.js"></script>
 </body>
 </html>
